<resources>
    <string name="app_name">CashOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_better_with_cash_out">Get better with Cash Out</string>
    <string name="get_better_with">Be Smoother with</string>
    <string name="cash_out">Cash Out</string>
    <string name="next">Next</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="_01xxxxxxxxx">01XXXXXXXXX</string>
    <string name="password">password</string>
    <string name="phone_number">phone number</string>
    <string name="make_sure_of_yor_data_to_login_successfully">Make sure of yor data to login successfully</string>
    <string name="welcome">WELCOME</string>
    <string name="align_the_document_within_the_frame">Align the document within the frame</string>
    <string name="avoid_shadows_for_better_results">Avoid shadows for better results</string>
    <string name="ensure_the_document_or_text_is_clear">Ensure the document or text is clear</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="your_balance">Your balance : 12000.9 EGP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="zero_amount">$0</string>
    <string name="please_wait_this_may_take_a_few_minutes">Please Wait , This may take a few minutes ....</string>
    <string name="verifying">Verifying \n</string>
    <string name="your_id_preview">Your ID Preview</string>
    <string name="take_another_picture">Take another picture</string>
    <string name="notifications">Notifications</string>
    <string name="cash_out_btn">Cash Out</string>
    <string name="recieve_transaction">Recieve Transaction</string>
    <string name="transaction_received_from">Transaction Received from:</string>
    <string name="amount">Amount :</string>
    <string name="newText">New</string>
    <string name="oldText">Old</string>
    <string name="your_code">YOUR CODE</string>
    <string name="otp_description">Redirect to your nearest Ahly momken pickup point to get your cash</string>
    <string name="codeValid">Code is ONLY valid for 72 hrs</string>
    <string name="confirm">Confirm</string>
    <string name="cashed_out_successfully">Cashed Out Successfully</string>
    <string name="balance">Balance</string>
    <string name="transfer">Transfer</string>
    <string name="transactionWithId">%s - %s</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="all">All</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="national_id">National Id</string>
    <string name="xxxxxxxxxxxxxx">xxxxxxxxxxxxxx</string>
</resources>