<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#03875B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/make_sure_of_yor_data_to_login_successfully"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/welcome_label"
        app:layout_constraintStart_toStartOf="@+id/welcome_label"
        app:layout_constraintTop_toBottomOf="@+id/welcome_label" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/phone_number"
        android:layout_marginStart="18dp"
        android:textColor="#4A4A4A"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="#4A4A4A"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_shape"
        android:hint="@string/_01xxxxxxxxx"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_shape"
        android:hint="@string/enter_password"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        app:layout_constraintHeight_percent="0.074"
        android:backgroundTint="#03875B"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/register_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        android:textColor="#4A4A4A"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_prompt"
        app:layout_constraintStart_toEndOf="@+id/register_prompt"
        app:layout_constraintTop_toTopOf="@+id/register_prompt" />

</androidx.constraintlayout.widget.ConstraintLayout>