<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.NotificationsFragment"
    >
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="13dp"
        android:src="@drawable/momknspace_white"
        />
    <ImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="13dp"
        android:src="@drawable/black_baseline_arrow_back_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:background="@drawable/white_rounded_box"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/newText"
            android:textColor="@color/greyText"
            android:textSize="20sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newNotificationsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/notification"
            tools:itemCount="2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/oldText"
            android:textColor="@color/greyText"
            android:textSize="20sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/oldNotificationsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/notification"
            />

    </LinearLayout>
</LinearLayout>