<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ExtractedDataFragment"
    android:background="@color/grey"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/your_id_preview"
            />
        <ImageView
            android:id="@+id/previewImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            tools:layout_height="200dp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/white_rounded_box"
        android:paddingTop="20dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/NID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:inputType="date"/>
        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/retryPicture"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="#F0882C"
                android:layout_marginHorizontal="20dp"
                android:text="@string/take_another_picture"
                />
            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="#000000"
                android:layout_marginHorizontal="20dp"
                android:text="@string/next"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>